[gd_scene load_steps=6 format=3 uid="uid://bkc77a1ht46v5"]

[ext_resource type="Script" path="res://Scripts/UILevelDisplay.gd" id="1_0o036"]
[ext_resource type="Theme" uid="uid://hpwvqqmbxmcc" path="res://Sauce/Theme/ThemeGame.tres" id="1_o3kqu"]
[ext_resource type="Texture2D" uid="uid://bvsmtmd0j82rv" path="res://Sauce/GamePhotos/Levels-Level10.JPG" id="1_ouhec"]
[ext_resource type="PackedScene" uid="uid://cakwlqgjrf5w1" path="res://Prefabs/UI/UITrashCans.tscn" id="2_fw4he"]
[ext_resource type="StyleBox" uid="uid://gibpas518jot" path="res://Sauce/Theme/PanelLevelHover.tres" id="2_s7cb7"]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(186, 218)
layout_mode = 3
anchors_preset = 0
offset_right = 186.0
offset_bottom = 218.0
script = ExtResource("1_0o036")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(186, 218)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o3kqu")
theme_override_styles/panel = ExtResource("2_s7cb7")

[node name="Level" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -95.0
offset_right = 80.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="Panel/Level"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
texture = ExtResource("1_ouhec")
expand_mode = 3
stretch_mode = 4

[node name="TrashStars" parent="Panel/Level" instance=ExtResource("2_fw4he")]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Level"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Wasd"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Panel/Level"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Start"

[connection signal="button_down" from="Panel/Level/Button" to="." method="_on_button_button_down"]
[connection signal="mouse_entered" from="Panel/Level/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Level/Button" to="." method="_on_button_mouse_exited"]
